--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,38 +1,164 @@
-.App {
-  text-align: center;
+body {
+	background: #C5C5C5;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
+/* =================== App Component =================== */
+/* The header */
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: 20px;
+	position: absolute;
+	width: 90%;
+	margin: 5px 5%;
+	color: #020044;
+	left: 0;
+	right: 0;
+	top: 0;
+	border-bottom: thin solid #000000;
 }
 
-.App-link {
-  color: #61dafb;
+/* Main content area */
+.content {
+	position: absolute;
+	top: 120px;
+	left: 0;
+	right: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Link */
+a {
+	color: #0D336E;
+}
+
+/* =================== Home Component =================== */
+/* Home container */
+#dashboard {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
+	align-content: space-around;
+}
+
+/* Home page title */
+h2 {
+	color: #020044;
+	font-size: 24px;
+	margin: 5px 20% 15px;
+}
+
+/* Home page questions list container */
+.questionList {
+	border: thin solid #000000;
+	border-radius: 10px;
+	box-shadow: 3px 3px 7px 0 rgba(46, 61, 73, 0.5);
+	padding: 10px;
+	width: 35%;
+	margin: 5px Calc((30% - 140px) / 4);
+	align-self: stretch;
+}
+
+/* Home page questions list title */
+h3 {
+	color: #020044;
+	text-align: center;
+}
+
+/* Home page questions list */
+ul {
+	list-style: none;
+	margin: 0;
+	padding: 0 5px;
+}
+
+/* Home page questions list item */
+li {
+	margin: 10px 5px;
+	text-align: center;
+	text-transform: capitalize;
+	line-height: 1.4rem;
+}
+
+/* =================== Login Page Component =================== */
+/* Login form */
+#loginForm {
+	border: thin solid #000000;
+	border-radius: 10px;
+	box-shadow: 3px 3px 7px 0 rgba(46, 61, 73, 0.5);
+	padding: 10px;
+	margin: 10px Calc((100% - 210px) / 2);
+}
+
+/* Login form dropdown */
+#loginForm select {
+	margin: 5px;
+	padding: 2px;
+}
+
+/* Login form button */
+#loginForm button {
+	margin: 5px;
+	padding: 2px 5px;
+	border-radius: 5px;
+	border: thin solid #000000;
+}
+
+/* =================== Question Component =================== */
+/* Question container */
+#questionContainer {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: center;
+	align-content: space-around;
+}
+
+/* Question component home page link */
+#questionContainer a {
+	padding: 0 10px 10px;
+	margin: 0 0 0 5%;
+}
+
+/* Question component title */
+#questionContainer h3 {
+	padding: 0 10px 10px;
+	margin: 0 35% 0 25%;
+	font-size: 22px;
+}
+
+/* Question component answer container */
+.answer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	align-content: space-around;
+	padding: 10px;
+	width: 35%;
+	margin: 5px Calc((30% - 140px) / 4);
+	align-self: stretch;
+}
+
+/* Question component answer button */
+.answer button {
+	padding: 10px;
+	font-size: 18px;
+	margin: 10px;
+	border: none;
+	border-radius: 10px;
+}
+
+/* Question component answer stats */
+.stats {
+	border-radius: 10px;
+	padding: 10px;
+	text-align: center;
+}
+
+/* Question component answer stats text */
+.stats div {
+	padding:  5px;
 }
