--- a/src/components/App.css
+++ b/src/components/App.css
@@ -20,10 +20,32 @@ body {
 	border-bottom: thin solid #000000;
 }
 
+/* main title */
+h1 {
+	padding-bottom: 0;
+	margin-bottom: 0;
+}
+
+/* Navigation bar */
+.App-header nav {
+	display: flex;
+	justify-content: space-around;
+	align-content: center;
+	width: 90%;
+	margin: 5px 5%;
+}
+
+/* Navigation link */
+.navLink {
+	margin: 5px 20px;
+	padding: 5px 10px;
+	display: block;
+}
+
 /* Main content area */
 .content {
 	position: absolute;
-	top: 120px;
+	top: 150px;
 	left: 0;
 	right: 0;
 }
