--- a/src/components/App.css
+++ b/src/components/App.css
@@ -151,13 +151,37 @@ li {
 /* Question component home page link */
 #questionContainer a {
 	padding: 0 10px 10px;
-	margin: 0 0 0 5%;
+	margin: 0 0 0 15%;
+}
+
+/* Question container user profile pic */
+#questionContainer .profilePic {
+	width: 64px;
+	margin: 0 0 0 10%;
+}
+
+/* Question container - title container*/
+#titleCont {
+	padding: 0 10px;
+	margin: 0 30% 0 0;
+	display: flex;
+	flex-direction: column;
+	align-content: stretch;
+	height: 64px;
+}
+
+/* Question container 'asked' */
+#titleCont div {
+	margin-bottom: 0;
+	padding-bottom: 0;
+	height: 30px;
+	font-size: 18px;
 }
 
 /* Question component title */
-#questionContainer h3 {
-	padding: 0 10px 10px;
-	margin: 0 35% 0 25%;
+#titleCont h3 {
+	margin: 0;
+	padding: 0;
 	font-size: 22px;
 }
 
