--- a/src/components/App.css
+++ b/src/components/App.css
@@ -225,6 +225,15 @@ li {
 	padding:  5px;
 }
 
+/* Question component error message */
+#errorMessage {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	align-content: space-around;
+}
+
 /* =================== New Question Component =================== */
 /* Add question form */
 #newQuestion {
